src/objects/Update_Construction_Stage__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_Completion__c</fullName>
        <label>Date of Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Construction_Stages__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Construction Stages</label>
        <referenceTo>Project_Construction_Stages__c</referenceTo>
        <relationshipLabel>Update Construction Stages</relationshipLabel>
        <relationshipName>Update_Construction_Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_Unit__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <filterItems>
                <field>Project_Unit__c.Unit_Status__c</field>
                <operation>equals</operation>
                <value>Sold</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_Unit__c</referenceTo>
        <relationshipLabel>Update Construction Stages</relationshipLabel>
        <relationshipName>Update_Construction_Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Update Construction Stages</relationshipLabel>
        <relationshipName>Update_Construction_Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>UnProcessed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Update Construction Stage</label>
    <nameField>
        <displayFormat>UPD-{00000}</displayFormat>
        <label>Update Construction Stage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Update Construction Stages</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>